[package]
name = "sort_algo_visualizer"
version = "0.1.0"
authors = ["Erkan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.108.0"
plotters = {version = "0.2.14",default_features = false,features = ["piston","histogram"]}
rand = "0.7.3"

[profile.release]
opt-level = 3
